# TalentNavigator_Backend

./: README.md
Backend/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
